# LLM-Training

./: CMakeLists.txt  README.md  neural_network.cpp  neural_network_cuda.cpp
